docs: fix scrollbar gutter

--- a/packages/docs/src/styles/base.css
+++ b/packages/docs/src/styles/base.css
@@ -41,6 +41,7 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-gutter: stable;
 }
 
 body {
